add  person ursula

--- a/index.yaml
+++ b/index.yaml
@@ -38,7 +38,7 @@ todo:
     - mark-carney         # Goldman -> Bank of England -> Bank of Canada
     - mario-monti         # ha scheda ma verificare completezza
     - enrico-letta        # PD, Sciences Po, Bilderberg?
-    - ursula-von-der-leyen # Commissione UE, WEF connections
+    # ursula-von-der-leyen - DONE 2025-12-04
 
   # Istituzioni da aggiungere con scheda
   istituzioni_da_aggiungere:
@@ -199,3 +199,4 @@ relazioni:
     - {da: david-rockefeller, a: zbigniew-brzezinski}
     - {da: henry-kissinger, a: klaus-schwab}
     - {da: gianni-agnelli, a: john-elkann}
+    - {da: angela-merkel, a: ursula-von-der-leyen}
